--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,9 @@
-# ===== Python キャッシュ =====
+# Pythonキャッシュ
 __pycache__/
 */__pycache__/
-*.py[cod]
-*$py.class
-
-# ===== 仮想環境 =====
-venv/
-env/
-.venv/
-ENV/
-venv/lib/
-venv/Include/
-venv/Lib/
-
-# ===== データベース =====
 db.sqlite3
+*.pyc
+venv/lib/
 
-# ===== 環境変数ファイル =====
+#環境変数(aws用)
 .env
-
-# ===== OS・IDEなど =====
-.DS_Store
-.idea/
-.vscode/
