--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,54 @@
 annotated-types==0.7.0
 anyio==4.11.0
-asgiref==3.9.1
-blinker==1.9.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.3.0
+asgiref==3.10.0
+attrs==25.4.0
+autobahn==24.4.2
+Automat==25.4.16
+boto3==1.40.61
+botocore==1.40.61
+certifi==2025.10.5
+cffi==2.0.0
+channels==4.3.1
+charset-normalizer==3.4.4
+constantly==23.10.4
+cryptography==46.0.3
+daphne==4.2.1
 distro==1.9.0
-Django==5.2.5
+Django==5.2.7
+django-storages==1.14.6
 exceptiongroup==1.3.0
-Flask==3.1.2
-flask-cors==6.0.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.11.0
-MarkupSafe==3.0.3
-openai==2.0.0
-pillow==11.3.0
-pydantic==2.11.9
-pydantic_core==2.33.2
+hyperlink==21.0.0
+idna==3.11
+incremental==24.7.2
+jiter==0.11.1
+jmespath==1.0.1
+openai==2.6.1
+pillow==12.0.0
+psycopg2-binary==2.9.11
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyOpenSSL==25.3.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
-python-dotenv==1.1.1
+python-dotenv==1.2.1
 requests==2.32.5
+s3transfer==0.14.0
+service-identity==24.2.0
+six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
+stripe==13.0.1
+tomli==2.3.0
 tqdm==4.67.1
+Twisted==25.5.0
+txaio==25.9.2
 typing-inspection==0.4.2
-typing_extensions==4.14.1
+typing_extensions==4.15.0
 urllib3==2.5.0
-Werkzeug==3.1.3
+zope.interface==8.0.1
